# TxGraffiti

./: .gitignore  LICENSE  Makefile  README.md  graph_conjectures.ipynb  graph_conjectures.py  main.py  make_data.py  make_graph_data.py  pyproject.toml  requirements.txt  setup.py  shell.nix  test.py  testing.ipynb
TxGraffiti/classes/: conjecture_class.py
TxGraffiti/functions/: build_data.py  make_inequalities.py
math_data/data/: graphs.csv  integers.csv
math_data/functions/: __init__.py  build_data.py  invariant_functions.py  invariants.txt  object_properties.py  properties.txt
server/: main.py
templates/: home.html
