[tool.poetry]
name = "txgraffiti"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
annotated-types = "0.5.0"
anyio = "3.7.1"
appdirs = "1.4.4"
appnope = "0.1.3"
asttokens = "2.2.1"
attrs = "23.1.0"
backcall = "0.2.0"
click = "8.1.3"
colorama = "0.4.6"
comm = "0.1.3"
contourpy = "1.1.0"
cycler = "0.11.0"
debugpy = "1.6.7"
decorator = "5.1.1"
entrypoints = "0.3"
exceptiongroup = "1.1.3"
executing = "1.2.0"
fastapi = "0.101.1"
fonttools = "4.40.0"
grinpy = "19.7a0"
halo = "0.0.31"
idna = "3.4"
importlib-metadata = "6.7.0"
importlib-resources = "6.0.0"
ipykernel = "6.23.3"
ipython = "8.14.0"
jedi = "0.18.2"
jupyter-client = "8.3.0"
jupyter-core = "5.3.1"
kiwisolver = "1.4.4"
log-symbols = "0.0.14"
matplotlib = "3.7.2"
matplotlib-inline = "0.1.6"
mccabe = "0.6.1"
mpmath = "1.3.0"
nest-asyncio = "1.5.6"
networkx = "3.1"
numpy = "1.25.0"
packaging = "23.1"
pandas = "2.0.2"
parso = "0.8.3"
pexpect = "4.8.0"
pickleshare = "0.7.5"
Pillow = "10.0.0"
platformdirs = "3.8.0"
prompt-toolkit = "3.0.38"
psutil = "5.9.5"
ptyprocess = "0.7.0"
PuLP = "2.7.0"
pure-eval = "0.2.2"
pycodestyle = "2.5.0"
pydantic = "2.1.1"
pydantic-core = "2.4.0"
pyfiglet = "0.8.post1"
pyflakes = "2.1.1"
Pygments = "2.15.1"
pyparsing = "3.0.9"
python-dateutil = "2.8.2"
pytz = "2023.3"
pyzmq = "25.1.0"
six = "1.16.0"
sniffio = "1.3.0"
spinners = "0.0.24"
stack-data = "0.6.2"
starlette = "0.27.0"
sympy = "1.12"
termcolor = "2.3.0"
toml = "0.10.2"
tornado = "6.3.2"
traitlets = "5.9.0"
typing-extensions = "4.7.1"
tzdata = "2023.3"
ujson = "5.8.0"
wcwidth = "0.2.6"
zipp = "3.15.0"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
black = "19.3b0"
docstring-to-markdown = "0.12"
flake8 = "3.7.7"
pluggy = "1.2.0"
python-lsp-jsonrpc = "1.0.0"
python-lsp-server = "1.7.4"
uvicorn = "^0.23.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
